feat: Complete Week 2-3 MVP implementation and cleanup
- Implemented Offer Detail page with status tracking and agent responses
- Completed dashboard detailed views (Offers, Documents, Payments)
- Linked all dashboard views and offer flows together
- Added Offer Detail route and navigation

Cleanup and organization:
- Removed redundant documentation files (ENVIRONMENT_SETUP.md, SETUP_DATABASE.md, PROJECT_STATUS.md, IMPLEMENTATION_SUMMARY.md, IMMEDIATE_ACTION_ITEMS.md)
- Removed redundant scripts (check-env.sh, setup-production.sh)
- Consolidated setup instructions into SETUP.md
- Created PRODUCTION_READINESS_CHECKLIST.md for production planning

Documentation structure:
- README.md: Main project documentation
- SETUP.md: Comprehensive setup guide
- DEVELOPMENT.md: Quick development reference
- GOOGLE_LOGIN_SETUP.md: Google OAuth setup guide
- POSTGRESQL_SETUP.md: Database setup guide
- PRE_DEPLOYMENT_CHECKLIST.md: Pre-deployment checklist
- PRODUCTION_READINESS_CHECKLIST.md: Production readiness analysis
- NEXT_STEPS_ROADMAP.md: Implementation roadmap
- DEPLOY_AUTH_SERVER.md: Auth server deployment guide

All MVP core features implemented:
✅ Property search and browsing
✅ User authentication (Google OAuth)
✅ Favorites management
✅ Buy Now workflow (representation → payment → offer)
✅ Offer submission and tracking
✅ Dashboard with detailed views
✅ Database persistence (PostgreSQL)

Ready for production implementation:
- Stripe payment integration (next priority)
- Email notifications
- eSignature integration

--- a/env.example
+++ b/env.example
@@ -4,5 +4,7 @@ VITE_SIMPLYRETS_API_URL=https://api.simplyrets.com
 VITE_SIMPLYRETS_API_KEY=your_api_key_here
 VITE_SIMPLYRETS_SECRET=your_secret_here
 
-# Optional: Override API URL for development/testing
-# VITE_SIMPLYRETS_API_URL=https://api.simplyrets.com/v1
+# Auth Server Configuration
+# Defaults to http://localhost:3001 for development if not set
+# Set this in production to your deployed auth server URL
+# VITE_AUTH_SERVER_URL=http://localhost:3001
