--- a/google-login-demo/env.example
+++ b/google-login-demo/env.example
@@ -14,6 +14,14 @@ NODE_ENV=development
 BASE_URL=http://localhost:3001
 FRONTEND_URL=http://localhost:5173
 
+# Database Configuration
+DATABASE_URL=postgresql://localhost:5432/brokerforce_dev
+# For production, use: postgresql://user:password@host:5432/database
+
+# JWT Configuration
+JWT_SECRET=your-super-secret-jwt-key-change-this-to-something-secure
+JWT_EXPIRES_IN=7d
+
 # Production URLs (uncomment and update for production)
 # BASE_URL=https://your-deployed-auth-server.com
 # FRONTEND_URL=https://rebrokerforceai.netlify.app
