--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   publish = "dist"
-  command = "npm install -g pnpm@8.10.0 && pnpm install && pnpm build"
+  command = "corepack enable && corepack prepare pnpm@8.10.0 --activate && pnpm install && pnpm build"
 
 [build.environment]
   NODE_VERSION = "18"
