--- a/netlify.toml
+++ b/netlify.toml
@@ -9,9 +9,8 @@
   SECRETS_SCAN_OMIT_KEYS = "NODE_ENV,PORT,BASE_URL,FRONTEND_URL"
 
 # Environment variables for production
-# Temporarily hardcoded to fix build issue - verify correct URL in Railway
-[context.production.environment]
-  VITE_AUTH_SERVER_URL = "https://brokerforce-website-production-a631.up.railway.app"
+# Set VITE_AUTH_SERVER_URL in Netlify dashboard → Site settings → Environment variables
+# Value should be your Railway backend URL (e.g., https://brokerforce-website-production-a631.up.railway.app)
 
 # Redirects for SPA
 [[redirects]]
