--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,6 @@
 [build]
   publish = "dist"
-  command = "npm install -g pnpm@8.10.0 --force && pnpm install && pnpm build"
-  # Rebuild triggered to fix Header import issue
+  command = "npm install -g pnpm@8.10.0 --force && pnpm install --no-frozen-lockfile && pnpm build"
 
 [build.environment]
   NODE_VERSION = "18"
