--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   publish = "dist"
-  command = "npm install && npm run build"
+  command = "npm install -g pnpm@8.10.0 --force && pnpm install && pnpm build"
 
 [build.environment]
   NODE_VERSION = "18"
@@ -9,8 +9,9 @@
   SECRETS_SCAN_OMIT_KEYS = "NODE_ENV,PORT,BASE_URL,FRONTEND_URL"
 
 # Environment variables for production
-# Set VITE_AUTH_SERVER_URL in Netlify dashboard → Site settings → Environment variables
-# Value should be your Railway backend URL (e.g., https://brokerforce-website-production-a631.up.railway.app)
+# Temporarily hardcoded to fix build issue - verify correct URL in Railway
+[context.production.environment]
+  VITE_AUTH_SERVER_URL = "https://brokerforce-website-production.up.railway.app"
 
 # Redirects for SPA
 [[redirects]]
