--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "shadcnui",
   "type": "module",
+  "engines": {
+    "node": ">=20"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
