--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   publish = "dist"
-  command = "npm install -g pnpm@8.10.0 --force && pnpm install && pnpm build"
+  command = "node --version && npm install -g pnpm@8.10.0 --force && pnpm install && pnpm build"
 
 [build.environment]
   NODE_VERSION = "20"
