--- a/netlify.toml
+++ b/netlify.toml
@@ -9,9 +9,9 @@
   SECRETS_SCAN_OMIT_KEYS = "NODE_ENV,PORT,BASE_URL,FRONTEND_URL"
 
 # Environment variables for production
-# Temporarily hardcoded to fix build issue - verify correct URL in Railway
+# Backend URL from Railway
 [context.production.environment]
-  VITE_AUTH_SERVER_URL = "https://brokerforce-website-production.up.railway.app"
+  VITE_AUTH_SERVER_URL = "https://brokerforce-website-production-a631.up.railway.app"
 
 # Redirects for SPA
 [[redirects]]
