--- a/netlify.toml
+++ b/netlify.toml
@@ -1,17 +1,17 @@
 [build]
   publish = "dist"
-  command = "npm install && npm run build"
+  command = "npm install -g pnpm@8.10.0 --force && pnpm install && pnpm build"
 
 [build.environment]
-  NODE_VERSION = "20.11.0"
+  NODE_VERSION = "18"
   # Configure secrets scanning to ignore false positives
   # These are environment variable NAMES, not actual secrets
   SECRETS_SCAN_OMIT_KEYS = "NODE_ENV,PORT,BASE_URL,FRONTEND_URL"
 
 # Environment variables for production
-# Backend URL from Railway
+# Temporarily hardcoded to fix build issue - verify correct URL in Railway
 [context.production.environment]
-  VITE_AUTH_SERVER_URL = "https://brokerforce-website-production-a631.up.railway.app"
+  VITE_AUTH_SERVER_URL = "https://brokerforce-website-production.up.railway.app"
 
 # Redirects for SPA
 [[redirects]]
