--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   publish = "dist"
-  command = "npm install && npm run build"
+  command = "echo 'VITE_AUTH_SERVER_URL='$VITE_AUTH_SERVER_URL && npm install && npm run build"
 
 [build.environment]
   NODE_VERSION = "18"
