--- a/google-login-demo/env.example
+++ b/google-login-demo/env.example
@@ -24,5 +24,5 @@ JWT_EXPIRES_IN=7d
 
 # Production URLs (uncomment and update for production)
 # BASE_URL=https://your-deployed-auth-server.com
-# FRONTEND_URL=https://rebrokerforceai.netlify.app
+# FRONTEND_URL=https://brokerforce.ai
 # NODE_ENV=production
